# dotfiles

./: mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  zorin.md
